--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blue-imp-sample",
+  "name": "blueimp-load-image-sample",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "blueimp-load-image": "^5.14.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
