--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "blueimp-load-image": "^5.14.0",
     "core-js": "^3.6.5",
+    "vee-validate": "^3.4.10",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
     "vuetify": "^2.4.0"
