--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blueimp-load-image-sample",
+  "name": "fabricjs-sample",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,8 @@
     "vee-validate": "^3.4.10",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
