--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "blueimp-load-image": "^5.14.0",
     "core-js": "^3.6.5",
     "fabric": "^4.5.1",
+    "json-colorizer": "^2.2.2",
     "vee-validate": "^3.4.10",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
